--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   "author": "Diego Norel Vega Mejia",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "crypto": "^1.0.1",
+    "express": "^4.17.1",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "mongoose": "^5.10.11",
